# ForgeScoop-AppWindows

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js
src/: App.vue  ConvertPanel.vue  DownloadPanel.vue  MuxPanel.vue  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: convert.rs  convert_format.rs  format.rs  jobs.rs  main.rs  tools.rs
