[package]
name = "forgescoop"
version = "1.3.0"
description = "ForgeScoop — téléchargeur vidéo & audio pour Windows"
authors = ["Heiphaistos"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "io-util", "time", "fs", "macros", "rt-multi-thread"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
zip = "2"
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }
url = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
